Dashboard and YouTube link updated

--- a/Component 1/Report.html
+++ b/Component 1/Report.html
@@ -528,6 +528,13 @@ is -0.289.</p></li>
 <li><a href="https://www.kaggle.com/datasets/vinayakshanawad/cement-manufacturing-concrete-dataset" class="uri">https://www.kaggle.com/datasets/vinayakshanawad/cement-manufacturing-concrete-dataset</a></li>
 </ul>
 </div>
+<div id="links-to-dashboard-and-youtube-video" class="section level2">
+<h2><strong>Links to dashboard and YouTube video</strong></h2>
+<ul>
+<li>Dashboard: <a href="https://shubhangisanyal.shinyapps.io/dashboard_shubhangi/" class="uri">https://shubhangisanyal.shinyapps.io/dashboard_shubhangi/</a></li>
+<li>YouTube: <a href="https://www.youtube.com/watch?v=SM4EayRE-QY" class="uri">https://www.youtube.com/watch?v=SM4EayRE-QY</a></li>
+</ul>
+</div>
 
 
 
