Dashboard and YouTube link updated

--- a/Component 1/Report.html
+++ b/Component 1/Report.html
@@ -359,7 +359,7 @@ display: none;
 <h3 class="subtitle"><strong>Civil Engineering: Cement Manufacturing
 Dataset</strong></h3>
 <h4 class="author">Shubhangi Sanyal <br> Rollno: MDS202238 <br> Email:
-<a href="mailto:shubhangi@cmi.ac.in" class="email">shubhangi@cmi.ac.in</a></h4>
+<a href="shubhangi@cmi.ac.in">shubhangi@cmi.ac.in</a></h4>
 <h4 class="date">Date: 29th October, 2022</h4>
 
 </div>
@@ -525,14 +525,12 @@ is -0.289.</p></li>
 <div id="references" class="section level2">
 <h2><strong>References</strong></h2>
 <ul>
-<li><a href="https://www.kaggle.com/datasets/vinayakshanawad/cement-manufacturing-concrete-dataset" class="uri">https://www.kaggle.com/datasets/vinayakshanawad/cement-manufacturing-concrete-dataset</a></li>
-</ul>
-</div>
-<div id="links-to-dashboard-and-youtube-video" class="section level2">
-<h2><strong>Links to dashboard and YouTube video</strong></h2>
-<ul>
-<li>Dashboard: <a href="https://shubhangisanyal.shinyapps.io/dashboard_shubhangi/" class="uri">https://shubhangisanyal.shinyapps.io/dashboard_shubhangi/</a></li>
-<li>YouTube: <a href="https://www.youtube.com/watch?v=SM4EayRE-QY" class="uri">https://www.youtube.com/watch?v=SM4EayRE-QY</a></li>
+<li><a href="https://www.kaggle.com/datasets/vinayakshanawad/cement-manufacturing-concrete-dataset">Dataset
+link</a></li>
+<li><a href="https://shubhangisanyal.shinyapps.io/dashboard_shubhangi/">Dashboard
+link</a></li>
+<li><a href="https://www.youtube.com/watch?v=SM4EayRE-QY">YouTube
+link</a></li>
 </ul>
 </div>
 
